# aggregation-kilobot

./: .gitignore  README.md  kiloLOG.tsv
src/examples/behaviors/: CMakeLists.txt  kilobot_ALF_aggregation.c
src/examples/experiments/: kilobot_ALF_aggregation.argos  kilobot_ALF_dhtf_standAlone.argos
src/examples/experiments/aggregation_batch/: aggregation_exp.sh  aggregation_experiment.argos
src/examples/experiments/dhtf_batch/: dhtf_1.5xExperiment.argos  dhtf_experiment.argos  standalone_1.5xAdaptiveTimeout.sh  standalone_adaptiveTimeout.sh
src/examples/loop_functions/ARK_loop_functions/: CMakeLists.txt
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_aggregation/: CMakeLists.txt  aggregation.cpp  aggregation.h  kilobot_ALF_aggregation.c
